# rigraphlite

./: .Rbuildignore  .gitignore  .gitmodules  .lintr  .travis.yml  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  README.md  _pkgdown.yml  authors.html  authors.md  cleanup  configure  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  test-coverage.yaml
R/: RcppExports.R  adjlist.R  attributes.R  basic-add-delete.R  basic-constructors.R  basic.R  centrality.R  cliques.R  constructors.R  conversion-impl.R  conversion.R  cpp11.R  cycles.R  degree.R  experimental.R  foreign.R  games.R  generators.R  igraphlite-package.R  isomorphism.R  layout.R  operators.R  paths.R  phylo.R  s3-method.R  s4-method.R  sink.R  structural-centrality.R  structural-components.R  structural-distances.R  structural-efficiency.R  structural-non-simple.R  structural-paths.R  structural.R  tbl_tree.R  utils.R  zzz.R
data/: IGRAPH_ECOUNT_MAX.rda  IGRAPH_UNLIMITED.rda  IGRAPH_VCOUNT_MAX.rda
data-raw/: constant.R
docs/: 404.html  LICENSE-text.html  LICENSE.html  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
docs/reference/: E.html  IGraph.html  adjacent.html  adjlist.html  as.matrix.igraph_ptr.html  as_igraph.data.frame.html  as_igraph.html  as_phylo.html  attributes.html  augment.html  average_path_length.html  basic-add-delete.html  basic-adjacent.html  basic.html  centrality.html  common_params.html  component.html  components.html  connected.html  constructors.html  conversion-impl.html  conversion.html  distances.html  experimental.html  from-to.html  generators.html  graph_create.html  graph_famous.html  graph_from_data_frame.html  graph_full.html  graph_lattice.html  graph_star.html  graph_tree.html  igraph-class.html  igraph_to.html  igraphlite-package.html  incident.html  index.html  induced_subgraph_edges.html  is_igraph.html  (+24 more)
man/: adjacent.Rd  adjlist.Rd  as_igraph.Rd  attributes.Rd  basic-add-delete.Rd  basic-adjacent.Rd  basic-macros.Rd  basic.Rd  centrality.Rd  cliques.Rd  common_params.Rd  component.Rd  components.Rd  connected.Rd  constructors.Rd  conversion-impl.Rd  conversion.Rd  cycles-acyclic.Rd  cycles-eulerian.Rd  degree.Rd  distances.Rd  efficiency.Rd  experimental.Rd  from-to.Rd  games-degree-constrained.Rd  games-edge-rewiring.Rd  games-erdos-renyi.Rd  generators.Rd  graph_create.Rd  graph_famous.Rd  graph_full.Rd  graph_hypercube.Rd  graph_lattice.Rd  graph_lcf.Rd  graph_star.Rd  graph_tree.Rd  igraph-class.Rd  igraphlite-package.Rd  independent.Rd  is_igraph.Rd  (+23 more)
reference/: Vsink.html  adjacent.html  adjacent.md  adjlist.html  adjlist.md  as_inclist.html  as_tbl_tree.html  as_vnames.html  attributes.html  attributes.md  basic-add-delete.html  basic-add-delete.md  basic-adjacent.html  basic-adjacent.md  basic-macros.html  basic-macros.md  basic.html  basic.md  bridges.html  centrality.html  centrality.md  cliques.html  cliques.md  common_params.html  common_params.md  components.html  components.md  constructors.html  constructors.md  conversion-impl.html  conversion-impl.md  conversion.html  conversion.md  count_loops.html  cycles-acyclic.html  cycles-acyclic.md  cycles-eulerian.html  cycles-eulerian.md  delete_vertices.html  distances.html  (+93 more)
src/: .gitignore  CMakeLists.txt  Makevars.in  RcppExports.cpp  adjlist.hpp  attributes.cpp  basic.cpp  centrality.cpp  cliques.cpp  components.cpp  constructors.cpp  cpp11.cpp  cycles.cpp  data.cpp  dataframe.hpp  foreign.cpp  games.cpp  generators.cpp  igraph.cpp  igraph.hpp  igraphlite_types.h  init.cpp  interface.cpp  isomorphism.cpp  layout.cpp  matrix.hpp  methods.cpp  neighborhood.cpp  operators.cpp  paths.cpp  policy.hpp  structural.cpp  strvector.hpp  test.cpp  vector.hpp
tests/: testthat.R
tests/testthat/: test-attributes.R  test-basic-add-delete.R  test-basic.R  test-centrality.R  test-cliques.R  test-cycles.R  test-distances.R  test-experimental.R  test-foreign.R  test-games.R  test-generators.R  test-isomorphism.R  test-layout.R  test-method.R  test-misc.R  test-operators.R  test-paths.R  test-phylo.R  test-structural.R
tools/: .gitignore  attr.qmd  benchmark.R  benchmark.qmd  benchmark_shortest_paths.c  sandbox.R
